[project]
name = "fastmid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]",
    "pydantic>=2.11.3",
    "requests>=2.32.3",
    "streamlit>=1.45.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
  "pyright",
    "pytest",
    "pytest-cov",
    "ruff",
]


[tool.pyright]
include = ["."]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    ".venv",
    "tests"
]
[tool.black]
line-length = 88
target-version = ["py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py313"
line-length = 88
select = [
    "E",  # Pycodestyle
    "F",  # Pyflakes
    "I",  # Isort
    "B",  # Flake8-bugbear
    "C4", # Flake8-comprehensions
    "UP", # Pyupgrade
    "D",  # Pydocstyle
]
ignore = ["D100", "D104", "D107", "D102", "D401", "D205", "D200", "D212","E501", "D213", "D400", "D415", "D101", "D103","B904"]


[tool.mypy]
python_version = "3.13"
follow_imports = "normal"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true
strict_equality = true

[dependency-groups]
dev = [
    "black>=24.10.0",
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.4",
]
